@@ -8,4 +8,34 @@ Mod(3, 7)
 0
 0
 2
-Total time spent: 0
+[0, 0]
+[0, x]
+[0, y]
+[0, z]
+[0, 0]
+[0, 0]
+[0, x]
+[0, y]
+[0, z]
+[0, 0]
+[1, 0]
+[1, x]
+[1, y]
+[1, z]
+[1, 0]
+[x, x]
+[x, x]
+[x, x]
+[x, z]
+[x, x]
+[x, x]
+[x^2, x]
+[y*x, x]
+[x*z, z]
+[x*z + x, z]
+[-x + 1, x]
+[0, x]
+[-x + y, x]
+[z - x, z]
+[z + (-x + 1), z]
+Total time spent: 1
