@@ -18,6 +18,7 @@ Done for version 2.8.1 (released ??/??/2016):
    11- ellpointtoz(E / Qp, P) was not reduced mod q^Z
 BA 12- [breakloop] changes done in the first-level breakloop were lost when
        leaving the second-level breakloop.
+   13- polinterpolate could create illegal objects [#1837] (test-case by PB)
 
   Added
     1- permtonum: allow t_VECSMALL input
@@ -61,6 +62,7 @@ BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
    35- [libpari] rowsplice
    36- GP functions bnflogef, bnflog, bnflogdegree, nfislocalpower,
        rnfislocalcyclo
+   37- [libpari] varnmin, varnmax
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
